# wash-machine-main

./: .gitignore  BMP.h  CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  changelog.md  clean.sh  cmake_install.cmake  commit.sh  download.sh  increment.py  info.json  main.cpp  run.sh
ExtBoard/: ExtBoard.cpp  ExtBoard.h
crc/: CMakeLists.txt  Makefile  cmake_install.cmake  crc.h  crc16.c  crc32.c  crc8.c  lrc8.c
extboard/: CMakeLists.txt  ExtBoard.cpp  ExtBoard.h  Makefile  cmake_install.cmake
font-linux/: CMakeLists.txt  Font.cpp  Font.h  Makefile  cmake_install.cmake
general-tools/: CMakeLists.txt  Makefile  cmake_install.cmake  general_tools.c  general_tools.h
jparser-linux/: CMakeLists.txt  JParser.cpp  JParser.h  Makefile  cmake_install.cmake
ledmatrix-linux/: CMakeLists.txt  LedMatrix.cpp  LedMatrix.h  Makefile  cmake_install.cmake
linux-ecbm/: CMakeLists.txt  ecbm.c  ecbm.h  ecbm_core.c  ecbm_core.h
linux-ipc/: CMakeLists.txt  ipc.c  ipc.h
linux-stdsiga/: CMakeLists.txt  Makefile  cmake_install.cmake  stdsiga.c  stdsiga.h
logger-linux/: CMakeLists.txt  Logger.cpp  Logger.h  Makefile  cmake_install.cmake
mb-ascii-linux/: CMakeLists.txt  Makefile  MbAsciiMaster.cpp  MbAsciiMaster.h  cmake_install.cmake
mbuild/: log.txt  point_api.py  wash-machine  wash-machine-main
mbuild/config/: bonus.json  config.json  effects.json  frames.json  hwconfig.json  point_cert.json  render.json
mspi-linux/: CMakeLists.txt  Makefile  Mspi.cpp  Mspi.h  cmake_install.cmake
perf/: CMakeLists.txt  Perf.cpp  Perf.h
qrscaner-linux/: CMakeLists.txt  Makefile  cmake_install.cmake  qrscaner.c  qrscaner.h
render/: CMakeLists.txt  render.h
render_ledmatrx/: Cargo.toml
rgb332/: CMakeLists.txt  Makefile  cmake_install.cmake  rgb332.c  rgb332.h
timer/: CMakeLists.txt  Makefile  Timer.cpp  Timer.h  cmake_install.cmake
utils/: CMakeLists.txt  Makefile  bonus.cpp  bonus.h  button_driver.cpp  button_driver.h  cmake_install.cmake  point_api.py  render.cpp  render.h  utils.cpp  utils.h
(+26 files in other folders)
